<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="ie.dcu.buckley7mail.john.jbassign3_rugby.Email">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailto" />

    <EditText
        android:id="@+id/emailadd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremail" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailsubject"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Text
        android:id="@+id/subjectofemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailsubject" >
    </Text>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailmessage"/>

    <EditText
        android:id="@+id/messageadd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/entermessage"
        android:inputType="textMultiLine"
        android:lines="5" />

</LinearLayout>